# installer-NQRust-HvCollector

./: .gitignore  Cargo.toml  PROMETHEUS-TROUBLESHOOTING.md  README.md  RELEASE.md  SCHEMA-SYNC.md  TESTING-NOTES.md  airgap-config.yaml  docker-compose.yaml  env_template  init-db.sql
.github/workflows/: build-airgapped.yml  build-docker-bundle.yml  ci.yml  release.yml
docs/: AIRGAPPED-INSTALLATION.md
fluentd/: Dockerfile  fluent.conf
scripts/airgapped/: build-docker-airgapped-bundle.sh  build-payload.sh  build-single-binary.sh  download-docker-packages.sh  install-docker-offline.sh  save-images.sh
src/: main.rs  templates.rs  utils.rs
src/airgapped/: docker.rs  extractor.rs  mod.rs
src/app/: form_data.rs  mod.rs  registry_form.rs  state.rs  updates.rs
src/ui/: ascii_art.rs  confirmation.rs  env_setup.rs  error.rs  installing.rs  mod.rs  registry.rs  success.rs
