[package]
name = "installer-hvcollector"
version = "0.1.0"
description = "Interactive TUI installer for Hypervisor Collector stack"
authors = ["Idham <idhammultazam7@gmail.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "nqrust-hvcollector"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
semver = "1.0.23"
# Airgapped dependencies
flate2 = "1.0"      # For gzip decompression
tar = "0.4"         # For tar extraction
tempfile = "3.8"    # For temp directory management
indicatif = "0.17"  # For progress bars
sha2 = "0.10"       # For payload checksum verification

[package.metadata.deb]
name = "nqrust-hvcollector"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
	["target/release/nqrust-hvcollector", "usr/bin/nqrust-hvcollector", "755"],
]
